--- a/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.4-Lock接口与ReentrantLock.md
+++ b/JAVA/core/src/main/resources/并发编程/5.0-Java并发包--同步组件/5.4-Lock接口与ReentrantLock.md
@@ -15,32 +15,281 @@ Lock接口出现以前，Java程序是靠synchronized关键字实现锁功能的
 >Lock接口有三个实现类，分别是ReentrantLock(可重入锁)、ReadLock(读锁)、
 WriteLock(写锁。Segment继承了ReentrantLock。，有些锁可以允许多个线程并发的访问共享资源，比如读写锁，下面以ReentrantLock为例进行讲解.
 
-### ReentrantLock内部源码分析
+## ReentrantLock源码分析
 
-获取锁的时候会判断当前线程是否为获取锁的线程，如果是则将同步的状态 +1 ,释放锁的时候则将状态 -1。只有将同步状态的次数置为 0 的时候才会最终释放锁。
+>参考: org.java.core.base.concurrent.chapter5.MyReentrantLock
 
->ReentrantLock实现了Lock接口,ReentrantLock支持公平锁(FairSync)和非公平锁(NonfairSync)。
+**重入锁**：一个线程获得了锁之后仍然可以**反复**的加锁，不会出现自己阻塞自己的情况
 
-在上面的案例中，我们使用new ReentrantLock()，事实上使用的就是非公平锁。
-我们可以在源码中看到：
+获取锁的时候会判断当前线程是否为获取锁的线程，如果是则将同步的状态 +1 ,释放锁的时候则将状态 -1。只有将同步状态的次数置为 0 的时候才会最终释放锁.
+
+## ReentrantLock锁的类型(公平和非公平锁)
+
+>ReentrantLock实现了Lock接口,ReentrantLock支持公平锁(FairSync)和非公平锁(NonfairSync)。我们使用new ReentrantLock()，事实上使用的就是非公平锁:
 
 ```java
-//默认的构造方法
+// 默认非公平锁
+// 默认一般使用**非公平锁**，它的效率和吞吐量都比公平锁高的多
 public ReentrantLock() {
     sync = new NonfairSync();//非公平锁
+}
+
+// 公平锁
+public ReentrantLock(boolean fair) {
+    sync = fair ? new FairSync() : new NonfairSync();
 }
 ```
 
 >所谓非公平，指的是多个线程同时尝试获取一个锁时，可能会多次被同一个线程获取。实际中公平锁吞吐量比非公平锁小很多，因此我们大多数情况下使用的都是非公平锁。
 
-ReentrantLock内部维护了一个Sync成员对象，其是FairSync和NonfairSync的抽象父类。表面上看锁的功能是由ReentrantLock实现的，实际是由其内部的私有变量Sync来完成的，根据是否需要是公平锁，给Sync提供不同的具体实现。
+ReentrantLock内部维护了一个Sync成员对象，它是FairSync和NonfairSync的抽象父类。表面上看锁的功能是由ReentrantLock实现的，实际是由其内部的私有变量Sync来完成的，根据是否需要是公平锁，给Sync提供不同的具体实现。
 
-Sync类图：
+![](ReentrantLock.png)
 
-1. FairSync -> Sync-> AbstractQueuedSynchronizer
-2. NonfairSync -> Sync-> AbstractQueuedSynchronizer
+>可以看到FairSync和NonfairSync最终都继承了AbstractQueuedSynchronizer，事实上，自JDK1.5之后众多同步组件都继承了这个类。其是基于模板方法设计的，把很多公共的操作抽取出来，并实现，而某些细节不能确定如何实现时，则定义为抽象方法，由子类实现。例如我们这里，Sync类就直接之继承了AbstractQueuedSynchronizer，并实现了部分抽象方法，并把更具体的实现交给子类FairSync和NonfairSync实现。
 
->我们可以看到FairSync和NonfairSync最终都继承了AbstractQueuedSynchronizer，事实上，自JDK1.5之后众多同步组件都继承了这个类。其是基于模板方法设计的，把很多公共的操作抽取出来，并实现，而某些细节不能确定如何实现时，则定义为抽象方法，由子类实现。例如我们这里，Sync类就直接之继承了AbstractQueuedSynchronizer，并实现了部分抽象方法，并把更具体的实现交给子类FairSync和NonfairSync实现。  
+## 公平锁FairSync获取锁
+
+首先看下获取锁的过程：
+
+```java
+public void lock() {
+    sync.lock();
+}
+```
+
+可以看到是使用 `sync`的方法，而这个方法是一个抽象方法，具体是由其子类(`FairSync`)来实现的，以下是公平锁的实现:
+
+```java
+        final void lock() {
+            acquire(1);
+        }
+        
+        //AbstractQueuedSynchronizer 中的 acquire()
+        public final void acquire(int arg) {
+        if (!tryAcquire(arg) &&
+            acquireQueued(addWaiter(Node.EXCLUSIVE), arg))
+            selfInterrupt();
+    	}
+```
+
+第一步是尝试获取锁(`tryAcquire(arg)`),这个也是由其子类实现：
+
+```java
+        protected final boolean tryAcquire(int acquires) {
+            final Thread current = Thread.currentThread();
+            int c = getState();
+            // 首先会判断 `AQS` 中的 `state` 是否等于 0，0 表示目前没有其他线程获得锁，当前线程就可以尝试获取锁。
+            if (c == 0) {
+                // **注意**:尝试之前会利用 `hasQueuedPredecessors()` 方法来判断 AQS 的队列
+                // 中中是否有其他线程，如果有则不会尝试获取锁(**这是公平锁特有的情况**)。
+                if (!hasQueuedPredecessors() &&
+                    compareAndSetState(0, acquires)) {
+                    // 如果队列中没有线程就利用 CAS 来将 AQS 中的 state 修改为1，也就是获取锁，
+                    // 获取成功则将当前线程置为获得锁的独占线程(`setExclusiveOwnerThread(current)`)。
+                    setExclusiveOwnerThread(current);
+                    return true;
+                }
+            }
+            // 如果 `state` 大于 0 时，说明锁已经被获取了，则需要判断获取锁的线程是否为
+            // 当前线程(`ReentrantLock` 支持重入)，是则需要将 `state + 1`，并将值更新。
+            else if (current == getExclusiveOwnerThread()) {
+                int nextc = c + acquires;
+                if (nextc < 0)
+                    throw new Error("Maximum lock count exceeded");
+                setState(nextc);
+                return true;
+            }
+            return false;
+        }
+    }
+```
+
+#### 写入队列
+
+如果 `tryAcquire(arg)` 获取锁失败，则需要用 `addWaiter(Node.EXCLUSIVE)` 将当前线程写入队列中。
+写入之前需要将当前线程包装为一个 `Node` 对象(`addWaiter(Node.EXCLUSIVE)`)。
+
+> AQS 中的队列是由 Node 节点组成的双向链表实现的。
+
+包装代码:
+
+```java
+    private Node addWaiter(Node mode) {
+        Node node = new Node(Thread.currentThread(), mode);
+        // Try the fast path of enq; backup to full enq on failure
+        Node pred = tail;
+        if (pred != null) {
+            node.prev = pred;
+            if (compareAndSetTail(pred, node)) {
+                pred.next = node;
+                return node;
+            }
+        }
+        enq(node);
+        return node;
+    }
+```
+
+首先判断队列是否为空，不为空时则将封装好的 `Node` 利用 `CAS` 写入队尾，如果出现并发写入失败就需要调用 `enq(node);` 来写入了。
+
+```java
+private Node enq(final Node node) {
+    for (;;) {
+        Node t = tail;
+        if (t == null) { // Must initialize
+            if (compareAndSetHead(new Node()))
+                tail = head;
+        } else {
+            node.prev = t;
+            if (compareAndSetTail(t, node)) {
+                t.next = node;
+                return t;
+            }
+        }
+    }
+}
+```
+
+这个处理逻辑就相当于`自旋`加上 `CAS` 保证一定能写入队列。
+
+#### 挂起等待线程
+
+写入队列之后需要将当前线程挂起(利用`acquireQueued(addWaiter(Node.EXCLUSIVE), arg)`)：
+
+```java
+    final boolean acquireQueued(final Node node, int arg) {
+        boolean failed = true;
+        try {
+            boolean interrupted = false;
+            for (;;) {
+                final Node p = node.predecessor();
+                if (p == head && tryAcquire(arg)) {
+                    setHead(node);
+                    p.next = null; // help GC
+                    failed = false;
+                    return interrupted;
+                }
+                if (shouldParkAfterFailedAcquire(p, node) &&
+                    parkAndCheckInterrupt())
+                    interrupted = true;
+            }
+        } finally {
+            if (failed)
+                cancelAcquire(node);
+        }
+    }
+```
+
+首先会根据 `node.predecessor()` 获取到上一个节点是否为头节点，如果是则尝试获取一次锁，获取成功就万事大吉了。
+
+如果不是头节点，或者获取锁失败，则会根据上一个节点的 `waitStatus` 状态来处理(`shouldParkAfterFailedAcquire(p, node)`)。
+
+`waitStatus` 用于记录当前节点的状态，如节点取消、节点等待等。
+
+`shouldParkAfterFailedAcquire(p, node)` 返回当前线程是否需要挂起，如果需要则调用 `parkAndCheckInterrupt()`：
+
+```java
+    private final boolean parkAndCheckInterrupt() {
+        LockSupport.park(this);
+        return Thread.interrupted();
+    }
+```
+
+他是利用 `LockSupport` 的 `part` 方法来挂起当前线程的，直到被唤醒。
+
+
+## 非公平锁获取锁
+
+公平锁与非公平锁的差异主要在获取锁：
+
+公平锁就相当于买票，后来的人需要排到队尾依次买票，**不能插队**。
+
+而非公平锁则没有这些规则，是**抢占模式**，每来一个人不会去管队列如何，直接尝试获取锁。
+
+非公平锁:
+```java
+        final void lock() {
+            //直接尝试获取锁
+            if (compareAndSetState(0, 1))
+                setExclusiveOwnerThread(Thread.currentThread());
+            else
+                acquire(1);
+        }
+```
+
+公平锁:
+```java
+        final void lock() {
+            acquire(1);
+        }
+```
+
+还要一个重要的区别是在尝试获取锁时`tryAcquire(arg)`，非公平锁是不需要判断队列中是否还有其他线程，也是直接尝试获取锁：
+
+```java
+        final boolean nonfairTryAcquire(int acquires) {
+            final Thread current = Thread.currentThread();
+            int c = getState();
+            if (c == 0) {
+                // Predecessors: 前人，前任
+                //没有 !hasQueuedPredecessors() 判断
+                if (compareAndSetState(0, acquires)) {
+                    setExclusiveOwnerThread(current);
+                    return true;
+                }
+            }
+            else if (current == getExclusiveOwnerThread()) {
+                int nextc = c + acquires;
+                if (nextc < 0) // overflow
+                    throw new Error("Maximum lock count exceeded");
+                setState(nextc);
+                return true;
+            }
+            return false;
+        }
+```
+
+## 释放锁
+
+公平锁和非公平锁的释放流程都是一样的：
+
+```java
+    public void unlock() {
+        sync.release(1);
+    }
+    
+    public final boolean release(int arg) {
+        if (tryRelease(arg)) {
+            Node h = head;
+            if (h != null && h.waitStatus != 0)
+                // 释放之后需要调用 `unparkSuccessor(h)` 来唤醒被挂起的线程。
+            	   //唤醒被挂起的线程
+                unparkSuccessor(h);
+            return true;
+        }
+        return false;
+    }
+    
+    //尝试释放锁
+    protected final boolean tryRelease(int releases) {
+        int c = getState() - releases;
+        // 首先会判断当前线程是否为获得锁的线程，由于是重入锁所以需要将 `state` 减到 0 才认为完全释放锁。
+        if (Thread.currentThread() != getExclusiveOwnerThread())
+            throw new IllegalMonitorStateException();
+        boolean free = false;
+        if (c == 0) {
+            free = true;
+            setExclusiveOwnerThread(null);
+        }
+        setState(c);
+        return free;
+    }        
+```
+
+## 总结
+
+由于公平锁需要关心队列的情况，得按照队列里的先后顺序来获取锁(会造成大量的线程上下文切换)，而非公平锁则没有这个限制。所以也就能解释非公平锁的效率会被公平锁更高。
 
 ## 读写锁
 
